tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__document_symbol__enumerate_nested.snap
---
source: tests/integration/lsp/text_document/document_symbol.rs
assertion_line: 53
expression: result.response
---
[
  {
    "name": "Enumerate",
    "kind": 10,
    "deprecated": false,
    "range": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 15
      }
    },
    "selectionRange": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 15
      }
    },
    "children": [
      {
        "name": "Item",
        "detail": "it:foo",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 5,
            "character": 4
          },
          "end": {
            "line": 5,
            "character": 27
          }
        },
        "selectionRange": {
          "start": {
            "line": 5,
            "character": 9
          },
          "end": {
            "line": 5,
            "character": 23
          }
        },
        "children": []
      },
      {
        "name": "Item",
        "detail": "it:bar",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 6,
            "character": 4
          },
          "end": {
            "line": 6,
            "character": 27
          }
        },
        "selectionRange": {
          "start": {
            "line": 6,
            "character": 9
          },
          "end": {
            "line": 6,
            "character": 23
          }
        },
        "children": []
      },
      {
        "name": "Baz",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 7,
            "character": 4
          },
          "end": {
            "line": 7,
            "character": 18
          }
        },
        "selectionRange": {
          "start": {
            "line": 7,
            "character": 4
          },
          "end": {
            "line": 7,
            "character": 18
          }
        },
        "children": []
      },
      {
        "name": "Qux",
        "detail": "it:qux",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 8,
            "character": 4
          },
          "end": {
            "line": 8,
            "character": 32
          }
        },
        "selectionRange": {
          "start": {
            "line": 8,
            "character": 14
          },
          "end": {
            "line": 8,
            "character": 28
          }
        },
        "children": []
      }
    ]
  }
]
