tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__document_symbol__float_flat.snap
---
source: tests/integration/lsp/text_document/document_symbol.rs
assertion_line: 238
expression: result.response
---
[
  {
    "name": "Figure: Foo",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 7,
          "character": 12
        }
      }
    }
  },
  {
    "name": "Figure: Bar",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 9,
          "character": 0
        },
        "end": {
          "line": 12,
          "character": 12
        }
      }
    }
  },
  {
    "name": "Figure: Baz",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 14,
          "character": 0
        },
        "end": {
          "line": 17,
          "character": 12
        }
      }
    }
  }
]
